--- a/views/home.html
+++ b/views/home.html
@@ -4,28 +4,30 @@
     <title>Welcome To eVAPORation</title>
     <meta name="description" content="Premier quality vape products at an affordable price.">
     <meta name="keywords" content="e-cigs, vape, aurora, co, family owned, affordable">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Fredericka+the+Great|Allura|Amatic+SC|Arizonia|Averia+Sans+Libre|Cabin+Sketch|Francois+One|Jacques+Francois+Shadow|Josefin+Slab|Kaushan+Script|Love+Ya+Like+A+Sister|Merriweather|Offside|Open+Sans|Open+Sans+Condensed|Oswald|Over+the+Rainbow|Pacifico|Romanesco|Sacramento|Seaweed+Script|Special+Elite">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Aldrich">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../public/css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <main>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">eVAPORation</a>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-2">
+                <a class="navbar-brand ml-3" href="#">eVAPORation</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <!-- <span class="navbar-toggler-icon"></span> -->
                   <span class="menu-btn">
                         <div class="btn-line"></div>
                         <div class="btn-line"></div>
                         <div class="btn-line"></div>
                   </span>
                 </button>
-              
-                <div class="collapse navbar-collapse mx-auto" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">About</a>
@@ -40,18 +42,47 @@
                       <a class="nav-link" href="#">Accessories</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                          </li>
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
                   </ul>
                 </div>
+                 <div class="collapse navbar-collapse justify-content-end">
+                    <ul class="navbar-nav">
+                        <li class="nav-item mr-2">
+                            <span class="navbar-text">Connect With Us:</span></li>
+                        <li class="nav-item mt-1">
+                        <a class="fa fa-instagram" href="https://www.instagram.com/evaporationvapeshoppe"></a>
+                        </li>
+                        <li class="nav-item mt-1">
+                            <a class="fa fa-facebook" href="https://www.facebook.com/evaporationvapeshoppe/"></a>
+                        </li>
+                    </ul>
+                </div>
         </nav>
+    </header>
+    <main>
+        <div class="container-fluid">
+            <div class="site-content">
+                <div class="d-flex justify-content-center">
+                    <div class="d-flex flex-column">
+                        <h1 class="site-title">eVAPORation</h1>
+                        <p class="site-desc">"FOR THE VAPER IN ALL OF US"</p>
+
+                        <div class="d-flex flex-row">
+                            <input type="button" value="View Juices" class="btn site-btn1 px-4 py-3 mr-4 btn-dark">
+                            <input type="button" value="About Us" class="btn site-btn2 px-4 py-3 mr-4 btn-light">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <div class="footer">
             Copyright © 2019  eVAPORation VAPE SHOPPE. All Rights Reserved.
     </div>
-    <script type="text/javascript" src="../public/css/main.css"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../public/js/main.js"></script>
 </body>
 </html>
