--- a/views/home.html
+++ b/views/home.html
@@ -65,7 +65,7 @@
             <div class="site-content">
                 <div class="d-flex justify-content-center">
                     <div class="d-flex flex-column">
-                        <h1 class="site-title">eVAPORation</h1>
+                        <h1 class="site-title"><img href="../public/img/elogo.jpg"></h1>
                         <p class="site-desc">"FOR THE VAPER IN ALL OF US"</p>
 
                         <div class="d-flex flex-row">
@@ -73,6 +73,58 @@
                             <input type="button" value="About Us" class="btn site-btn2 px-4 py-3 mr-4 btn-light">
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="section-1">
+            <div class="container text-center">
+                <h1 class="heading-1">Our Mission</h1>
+                <h1 class="heading-2">& Story</h1>
+                <p class="para-1">
+                    Years ago, the cigarette apocalypse occurred, changing life on Earth, forever. The global infection of cigarette smoking spread rapidly, overwhelming any attempts of a smoke free environment. The VAPER'S now populate the earth with an undying hunger for JUICE. 
+                    While satisfied, and concerned only with consumption of JUICE and production of enormous CLOUDS, these VAPERS are smart and diligent in their pursuits of obtaining their favorite flavors.
+                     Our mission is to provide a comfortable and relaxing VAPE BAR,
+                     in which to sample and enjoy our JUICE. We hope to reform all cigarette smokers and encourage VAPING instead.  Some humans might be hesitant in our fight. We'll travel through many MODS 
+                     and JUICES to encourage the world of this new phenomenon and provide the VAPING species with the best experience........
+                </p>
+                <div class="row justify-content-center text-center">
+                    <div class="col-md-4">
+                        <div class="card" style="width:20rem;">
+                            <img src="../public/img/vape1.jpg" alt="image1" class="card-img-top">
+                            <div class="card-body">
+                            <h4 class="card-title">Responsive</h4>
+                            <p class="card-text">
+                                    Generate Lorem Ipsum placeholder text for use in your graphic, print and web layouts,
+                                     and discover plugins for your favorite writing, design and blogging tools.
+                            </p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card" style="width:20rem;">
+                            <img src="../public/img/vape2.jpg" alt="image2" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="card-title">Flexible</h4>
+                                <p class="card-text">
+                                        Generate Lorem Ipsum placeholder text for use in your graphic, print and web layouts,
+                                        and discover plugins for your favorite writing, design and blogging tools.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                            <div class="card" style="width:20rem;">
+                                <img src="../public/img/vape3.jpg" alt="image2" class="card-img-top">
+                                <div class="card-body">
+                                    <h4 class="card-title">Flexible</h4>
+                                    <p class="card-text">
+                                        Generate Lorem Ipsum placeholder text for use in your graphic, print and web layouts,
+                                        and discover plugins for your favorite writing, design and blogging tools.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
